2001-06-10  Martin Baulig  <baulig@suse.de>

	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
	Added all basic types.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* Makefile.am (install-local): Automatically run ./desktop-item-boot.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-desktop.xmldb: Moved here from ../libgnome.

	* desktop-item-boot.c: New file. This is a small utility which you
	need to run each time after doing a `make install'.

	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
	Added `BonoboConfigDatabase *ditem' and `const gchar *path' arguments.
	Implemented TC_GNOME_ExtraAttributes.

2001-06-09  Martin Baulig  <baulig@suse.de>

	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
	Implemented CORBA_tk_boolean and CORBA_tk_enum.

	* bonobo-config-ditem.c (real_sync): Implemented. We can now
	write a file back to disk if it's modified.

2001-06-08  Martin Baulig  <baulig@suse.de>

	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
	Implemented CORBA_tk_struct.

2001-06-05  Martin Baulig  <baulig@suse.de>

	This is a "ditem" moniker for bonobo-config which can read
	and write .desktop files from GNOME 1.4 and KDE.
