@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
-<bonobo-conf>
+<bonobo-config>
   <section path="URL Handlers">
     <entry name="default-show" type="string" value="konqueror"/>
   </section>
-</bonobo-conf>
+  <section path="Foo">
+    <entry name="Test" type="long" value="0"/>
+  </section>
+</bonobo-config>
